--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </main>
 
     <script>
-        const API_URL = "http://127.0.0.1:8000";
+        const API_URL = "https://vakalat-ai-ydde.onrender.com";
 
         function setView(v) {
             document.querySelectorAll('.view-section').forEach(el => el.classList.add('hidden'));
@@ -442,5 +442,6 @@
         }
     </script>
 </body>
+
 
 </html>
